--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "eslint": "^6.6.0",
     "node-sass-chokidar": "^1.3.5",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
